objects/ServiceProviderProduct__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Provider Products</relationshipLabel>
        <relationshipName>Service_Provider_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceProviderName__c</fullName>
        <formula>ServiceProvider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceProviderName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceProvider__c</fullName>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Provider Products</relationshipLabel>
        <relationshipName>Service_Provider_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Provider Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Provider Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Provider Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>